responsivenss fixed aka manual font size decrease on smallest viewports and spacing updates using media queries

--- a/src/cssStyling/App.css
+++ b/src/cssStyling/App.css
@@ -55,6 +55,14 @@
   }
 }
 
+@media (max-width: 370px) {
+  .header-app-name {
+    font-size: x-large;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+}
+
 .nav-bar {
   opacity: 0.9;
   background-color: #021740;
@@ -65,6 +73,11 @@
   align-items: center;
   justify-content: center;
   gap: 2rem;
+}
+@media (max-width: 370px) {
+  .flex {
+    gap: 1rem;
+  }
 }
 
 .main-dropdown {
@@ -196,9 +209,9 @@ button.navbar-button.btn.btn-secondary:focus {
   }
 }
 
-@media (max-width: 350px) {
+@media (max-width: 370px) {
   .new-us {
-    font-size: 3rem;
+    font-size: 3.4rem;
     margin-top: 3.25rem;
   }
 }
@@ -208,9 +221,10 @@ button.navbar-button.btn.btn-secondary:focus {
   color: #021740;
 }
 
-@media (max-width: 350px) {
+@media (max-width: 370px) {
   .dont-stress {
-    font-size: 3rem;
+    font-size: 2.7rem;
+    margin-top: 2rem;
   }
 }
 
@@ -219,7 +233,7 @@ button.navbar-button.btn.btn-secondary:focus {
   font-size: 2.38rem;
 }
 
-@media (max-width: 350px) {
+@media (max-width: 370px) {
   .large-font-quick-answers {
     font-size: 2rem;
   }
@@ -236,9 +250,9 @@ button.navbar-button.btn.btn-secondary:focus {
   }
 }
 
-@media (max-width: 350px) {
+@media (max-width: 370px) {
   .dark-blue {
-    font-size: 2.5rem;
+    font-size: 2.6rem;
   }
 }
 
@@ -328,4 +342,14 @@ a.dropdown-item.dropdown-color.active {
 .individual-link {
   background-color: #fff;
   padding: 0.2rem;
+}
+
+.add-margin-top {
+  margin-top: 4rem;
+}
+
+@media (max-width: 570px) {
+  .add-margin-top {
+    margin-top: 0rem;
+  }
 }
